app/assets/stylesheets/application/panels/concepts/concept-list.css.scss
.concept-list {
  min-width: 200px;

  .edit {
    height: 26px;

    .create-concept {
      float: right;
    }
  }


  &>table {

    .concept-label {
      margin-right: 4px;
    }

    .empty-list {
      font-size: 1.06em;
      border: none;
      padding-bottom: 10px;
    }

    .concept-list-item>td{
      padding: 6px 0;

      table {
        border-spacing: 0;
        width: 100%;
        position: relative;

        th {
          width: 140px;
          text-align: right;
          vertical-align: top;
          color: $button-color;
        }
        
        td:empty:before {
          content:"-";
        }

        th, td {
          padding-top: 5px;
        }

        tr.label {
          td {
            font-size: 1.16em;
            padding: 6px 0 4px 0;
          }
        }

        tr.broader {
          .concept-label {
            font-size: 0.86em;
            &:before {
              top: 4px;
            }
          }
        }

        .lang {
          td {
            font: 1.1em $serif;
            line-height: 1.4em;
          }
          
          td, th {
            border: none;
            padding-bottom: 0;
          }

          span {
            margin: 0 2px;
          }
        }
      }
    }
  }
}






.medi {

  .concept-list {

    &>table {

      .concept-list-item>td{

        table {

          th {
            width: 90px;
          }

          tr.lang {
            td {
              font: 1em $serif;
              line-height: 1.3em;
            }
          }
          
          tr.definition {
            td {
              font-size: 0.9em;
            }
          }
        }
      }
    }
  }
}

.mini {


  .concept-list {
    font-size: 0.9em;

    &>table {

      .concept-list-item>td{

        table {

          th, td {
            padding: 2px 0;
          }
          
          th {
            border: none;
            width: 50px;
            text-align:left;
            font-size: 0.7em;
          }
          
          td {
            padding-top: 0;
            &:empty {
              line-height: 10px;
            }
          }

          tr.label {
            td {
              padding: 4px 0 2px 0;
            }
          }
          
          tr.definition {
            display: none;
          }
        }
      }
    }
  }
}

